# connpass-py

./: CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code-cov.yml  dependabot-auto-merge.yml  release-please.yml  release.yml  test-release.yml
examples/: get_event_presentations.py  get_events.py
src/connpass/: __init__.py  client.py  constants.py
src/connpass/core/: __init__.py  request_handler.py
src/connpass/models/: __init__.py  event.py  presentation.py
tests/: test_client.py  test_get_event_presentations.py  test_get_events.py  test_request_handler.py
tests/utils/: __init__.py  mock.py
