[project]
name = "connpass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ryohidaka", email = "39184410+ryohidaka@users.noreply.github.com" }
]
requires-python = ">=3.12.2"
dependencies = [
    "pydantic>=2.11.5",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "requests-mock>=1.12.1",
    "ruff>=0.11.11",
]
