[project]
name = "connpass"
version = "0.2.0"
description = "Python用connpass API v2クライアント"
readme = "README.md"
authors = [
    { name = "ryohidaka", email = "39184410+ryohidaka@users.noreply.github.com" }
]
requires-python = ">=3.12.2"
dependencies = [
    "pydantic>=2.11.5",
    "requests>=2.32.3",
]
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["connpass", "connpass-api", "api-client", "api"]

[project.urls]
Repository = "https://github.com/ryohidaka/connpass-py.git"
"Bug Tracker" = "https://github.com/ryohidaka/connpass-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "requests-mock>=1.12.1",
    "ruff>=0.11.11",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
